k8s_manifest/app-templates/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-serivce
  namespace: web-apps
spec: 
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    pod: nginx
